--- a/AndroidStudioProjects/app/src/main/AndroidManifest.xml
+++ b/AndroidStudioProjects/app/src/main/AndroidManifest.xml
@@ -9,9 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.BankQueue">
-        <activity android:name=".login_as_customer"></activity>
+        <activity android:name=".Employeepart"></activity>
+        <activity android:name=".Chooseservice" />
+        <activity android:name=".login_as_customer" />
         <activity android:name=".login_as_employee" />
-        <activity android:name=".login_as" >
+        <activity android:name=".login_as">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -21,9 +23,7 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/Theme.BankQueue.NoActionBar">
-
-        </activity>
+            android:theme="@style/Theme.BankQueue.NoActionBar" />
     </application>
 
 </manifest>
